- CPoint has a constructor, so it can set a default value when used as
   a function argument.
- It makes porting code from MFC or WTL a little easier.

* Extended the CRebar, CToolbar and CStatusbar classes.

* Removed CMDIApp
This class is no longer required, since it's functionality has been merged
with CWinApp. All applications (including MDI apps) now use CWinApp to start
Win32++.



Notes for users of previous versions:
-------------------------------------
* There are no cpp files as part of Win32++ now, so these files need to be
  removed from your existing project when upgrading.
  
* CRebar, CStatusbar, and CToolbar have been moved to their own header files,
  but this does not require a change to existing user code.
 
* For MDI applications inherit from CWinApp rather than CMDIApp to start 
  Win32++.

Version 6.02a
=============
Corrects a problem compiling Win32++ with Dev-C++ (or MinGW).

Version 6.02
============

New Features
------------
* Added support for x64 applications.

Win32++ can now be used to build 64 bit applications. The manifest file has 
been modified to support both 32bit and 64bit applications. The new manifest
should be used for any 64 bit applications that use common controls.

Users are encouraged to use the modern Win64 API functions like:
GetWindowLongPtr, SetWindowLongPtr, GetClassLongPtr and SetClassLongPtr.
Win32++ will convert these back to their Win32 API counterparts if required.


Version 6.01
============
Added    CFrame::SetMenuIcons
Added    CFrame::SetToolbarImages
Removed  CToolbar::SetToolbarImageList
Added    CToolbar::SetBitmap
Moved    CreateDisabledImageList to CFrame::CreateDisabledImageList
Modified CFrame::AddMenuIcons

New Features:
------------
* 32 bit bitmaps are now supported for toolbars (requires XP or Vista)
* SetMenuIcons and AddMenuIcons now also accept a bitmap for disabled icons
   in addition to the bitmap for normal icons.


Bug Fixes: 